Closed Bug 174134 Opened 22 years ago Closed 22 years ago

shutdown leak: nsIOService and nsProtocolProxyService via cycle

Categories

(Core :: Networking, defect, P2)

x86
Linux
defect

Tracking

()

VERIFIED FIXED
mozilla1.3alpha

People

(Reporter: dbaron, Assigned: dbaron)

References

Details

(Keywords: memory-leak, Whiteboard: [patch])

Attachments

(1 file)

The nsIOService and nsProtocolProxyService have a reference cycle, so they, and
a whole bunch of objects that they own, leak at XPCOM shutdown.  I'll attach a
patch that breaks this cycle in the Observe method of the IO service (observing
XPCOM shutdown).  I also add a null check before the use of mProxyService. 
Should this just be an assertion instead?

In any case, this cleans up a lot of the shutdown leak noise (along with bug
174131) that I see, and should make it a good bit easier to debug leaks.
Status: NEW → ASSIGNED
Keywords: mlk
Priority: -- → P2
Whiteboard: [patch]
Target Milestone: --- → mozilla1.3alpha
Attached patch patchSplinter Review
The first change is a little bit of cleanup that I think I actually did when
noticing that the function it's in was taking a lot of time in a profile.
Comment on attachment 102685 [details] [diff] [review]
patch

sr=darin (thanks for catching this!)
Attachment #102685 - Flags: superreview+
Comment on attachment 102685 [details] [diff] [review]
patch

r=bbaetz
Attachment #102685 - Flags: review+
Fix checked in to trunk, 2002-11-06 05:03 PDT.
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
*** Bug 179094 has been marked as a duplicate of this bug. ***
Will this fix be in the 1.2 branch?
is there any output that could verify this problem is solved in 1.3a?
Keywords: verifyme
Keywords: verifyme
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: