Fix shutdown leak of IO service and protocol proxy service by breaking cycle in XPCOM shutdown observer.  Slight performance improvement to nsIOService::GetCachedProtocolHandler.  b=174134  r=bbaetz  sr=darin